<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_title_color"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_city"
        android:textColor="@color/color_f8f8f8"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/color_f8f8f8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/ed_city"
            android:textColor="@color/color_1c1c1c"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="text"
            android:textColor="@color/color_1c1c1c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/ed_arfcn"
            android:textColor="@color/color_1c1c1c"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_arfcn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/color_1c1c1c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/ed_timing_offset"
            android:textColor="@color/color_1c1c1c"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_time_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="697000"
            android:inputType="number"
            android:maxLength="7"
            android:textColor="@color/color_1c1c1c" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/format_time_offset"
            android:textColor="@color/red"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_ok"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_cancel_2"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/back"
            android:textColor="@color/color_1c1c1c"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>