<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_line"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/work_mode"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rb_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="12dp"
                android:text="@string/single_cell"
                android:textSize="16sp"
                android:theme="@style/MainRadioButton" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/color_EDEDED" />

            <RadioButton
                android:id="@+id/rb_dual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="12dp"
                android:text="@string/two_cell"
                android:textSize="16sp"
                android:theme="@style/MainRadioButton" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_ok"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_cancel_2"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/cancel"
                android:textColor="@color/color_1c1c1c"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>